--- a/EmployeeTrainingTracker/EmployeeTrainingTracker.csproj
+++ b/EmployeeTrainingTracker/EmployeeTrainingTracker.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="8.2.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.8" />
   </ItemGroup>
 
